[gd_scene load_steps=65 format=3 uid="uid://dt8a2kv68wi4x"]

[ext_resource type="Script" path="res://scenes/characters/player/player.gd" id="1_l0660"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_jdfx5"]
[ext_resource type="PackedScene" uid="uid://4735ce8v1nmj" path="res://scenes/shards/shard.tscn" id="2_qvksl"]
[ext_resource type="PackedScene" uid="uid://dq81g8d2ygyw1" path="res://scenes/attractor/attraction_field.tscn" id="4_6a4nm"]
[ext_resource type="Texture2D" uid="uid://brmbpm3uf256u" path="res://assets/image/player/wizard-spritesheet.png" id="4_hae0p"]
[ext_resource type="Shader" path="res://scenes/characters/player/player.gdshader" id="4_xlbtt"]
[ext_resource type="PackedScene" uid="uid://dfpbv7oekjnpx" path="res://scenes/weapons/sword.tscn" id="7_bfyp8"]
[ext_resource type="PackedScene" uid="uid://by3mf57x47myt" path="res://scenes/characters/hitbox_component.tscn" id="7_scm71"]
[ext_resource type="PackedScene" uid="uid://wes2s2ggkfrk" path="res://scenes/characters/health_component.tscn" id="8_g4ygj"]
[ext_resource type="Script" path="res://scripts/HitboxComponent.gd" id="8_svdx3"]

[sub_resource type="Gradient" id="Gradient_4vlxg"]
offsets = PackedFloat32Array(0, 0.862595, 1)
colors = PackedColorArray(0.840273, 0.131442, 0, 1, 1, 0.607843, 0, 1, 6, 3, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_p58ah"]
seed = 105
frequency = 0.0745
fractal_octaves = 1
domain_warp_enabled = true
domain_warp_frequency = 0.025

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8i1ao"]
generate_mipmaps = false
seamless = true
color_ramp = SubResource("Gradient_4vlxg")
noise = SubResource("FastNoiseLite_p58ah")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dvuww"]
shader = ExtResource("4_xlbtt")
shader_parameter/fireColor = Color(1, 0.501961, 0, 1)
shader_parameter/fireScroll = Vector2(0, 0)
shader_parameter/fireBrightness = 1.0
shader_parameter/element = 1
shader_parameter/fireNoise = SubResource("NoiseTexture2D_8i1ao")

[sub_resource type="AtlasTexture" id="AtlasTexture_p3oh5"]
atlas = ExtResource("4_hae0p")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_swbf7"]
atlas = ExtResource("4_hae0p")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylyxk"]
atlas = ExtResource("4_hae0p")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhkyk"]
atlas = ExtResource("4_hae0p")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3ikl"]
atlas = ExtResource("4_hae0p")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_extl0"]
atlas = ExtResource("4_hae0p")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhek0"]
atlas = ExtResource("4_hae0p")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxjpl"]
atlas = ExtResource("4_hae0p")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d64li"]
atlas = ExtResource("4_hae0p")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppbv3"]
atlas = ExtResource("4_hae0p")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_km227"]
atlas = ExtResource("4_hae0p")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo437"]
atlas = ExtResource("4_hae0p")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sootk"]
atlas = ExtResource("4_hae0p")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_058ag"]
atlas = ExtResource("4_hae0p")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rjb0"]
atlas = ExtResource("4_hae0p")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a04i2"]
atlas = ExtResource("4_hae0p")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqqn5"]
atlas = ExtResource("4_hae0p")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7bcn"]
atlas = ExtResource("4_hae0p")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia1um"]
atlas = ExtResource("4_hae0p")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk4rt"]
atlas = ExtResource("4_hae0p")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bil4r"]
atlas = ExtResource("4_hae0p")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ue6c"]
atlas = ExtResource("4_hae0p")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlx0y"]
atlas = ExtResource("4_hae0p")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdogw"]
atlas = ExtResource("4_hae0p")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ysth"]
atlas = ExtResource("4_hae0p")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqo4a"]
atlas = ExtResource("4_hae0p")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nynqk"]
atlas = ExtResource("4_hae0p")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i27mu"]
atlas = ExtResource("4_hae0p")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_etkdy"]
atlas = ExtResource("4_hae0p")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtpq6"]
atlas = ExtResource("4_hae0p")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kfkl"]
atlas = ExtResource("4_hae0p")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1q2v"]
atlas = ExtResource("4_hae0p")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h2pj"]
atlas = ExtResource("4_hae0p")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn62f"]
atlas = ExtResource("4_hae0p")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nyff"]
atlas = ExtResource("4_hae0p")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nyjx"]
atlas = ExtResource("4_hae0p")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_new4o"]
atlas = ExtResource("4_hae0p")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2gm2"]
atlas = ExtResource("4_hae0p")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttbji"]
atlas = ExtResource("4_hae0p")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_my6c1"]
atlas = ExtResource("4_hae0p")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_opct6"]
atlas = ExtResource("4_hae0p")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2uq2"]
atlas = ExtResource("4_hae0p")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_66f78"]
atlas = ExtResource("4_hae0p")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ndlf"]
atlas = ExtResource("4_hae0p")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eti8"]
atlas = ExtResource("4_hae0p")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31kiv"]
atlas = ExtResource("4_hae0p")
region = Rect2(240, 240, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_whrgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3oh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swbf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylyxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhkyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3ikl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_extl0")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhek0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxjpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d64li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppbv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km227")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo437")
}],
"loop": true,
"name": &"float",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sootk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_058ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rjb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a04i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqqn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7bcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia1um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk4rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bil4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ue6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlx0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdogw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ysth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqo4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nynqk")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i27mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etkdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtpq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kfkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1q2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h2pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn62f")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nyff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nyjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_new4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2gm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttbji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my6c1")
}],
"loop": true,
"name": &"rise",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opct6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2uq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66f78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ndlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eti8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31kiv")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_b2in1"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wfbyd"]
gradient = SubResource("Gradient_b2in1")
width = 24
height = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wk02"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_l0660")
shard_scene = ExtResource("2_qvksl")

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
position = Vector2(0.5, 2.5)
polygon = PackedVector2Array(-7.5, -9.5, -11.5, 21.5, 11.5, 21.5, 4.5, -19.5, -5.5, -19.5)

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("2_jdfx5")
target = NodePath("..")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Smoothing2D"]
material = SubResource("ShaderMaterial_dvuww")
sprite_frames = SubResource("SpriteFrames_whrgy")
animation = &"jump"

[node name="Hand" type="Sprite2D" parent="Smoothing2D"]
visible = false
texture = SubResource("GradientTexture2D_wfbyd")
offset = Vector2(12, 0)

[node name="ShardPosition" type="Marker2D" parent="Smoothing2D/Hand"]
position = Vector2(40, 0)

[node name="ShardHolderPin" type="PinJoint2D" parent="Smoothing2D/Hand/ShardPosition"]
node_b = NodePath("../ShardHolder")
angular_limit_lower = 0.0872665
angular_limit_upper = -0.0872665

[node name="ShardHolder" type="StaticBody2D" parent="Smoothing2D/Hand/ShardPosition"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Smoothing2D/Hand/ShardPosition/ShardHolder"]
shape = SubResource("RectangleShape2D_2wk02")

[node name="AttractionField" parent="Smoothing2D/Hand" instance=ExtResource("4_6a4nm")]

[node name="Camera" type="Camera2D" parent="Smoothing2D"]
position = Vector2(-6, 2)
zoom = Vector2(2.5, 2.5)
limit_left = 0
limit_top = 0
limit_right = 1200
limit_bottom = 672
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_left_margin = 0.1
drag_right_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Weapon" type="Node2D" parent="Smoothing2D"]

[node name="Sword" parent="Smoothing2D/Weapon" instance=ExtResource("7_bfyp8")]
position = Vector2(0.125, 0)
scale = Vector2(1.00781, 1)
animation = &"swing_3"
frame_progress = 0.961237

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("HealthComponent") instance=ExtResource("7_scm71")]
script = ExtResource("8_svdx3")
HealthComponent = NodePath("../HealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitboxComponent"]
polygon = PackedVector2Array(-6, -18, 6, -18, 13, 24, -11, 24)

[node name="HealthComponent" parent="." instance=ExtResource("8_g4ygj")]

[connection signal="animation_looped" from="Smoothing2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
